# runpod-rs

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: check.yml
crates/runpod/: Cargo.toml
crates/runpod/gql/: get_pod.graphql  get_templates.graphql  gpu_types.graphql  myself_query.graphql  schema.graphql  spawn_pod.graphql  stop_pod.graphql  terminate_pod.graphql
crates/runpod/src/: client.rs  config.rs  error.rs  gql.rs  lib.rs  types.rs
crates/runpod_cli/: Cargo.toml
crates/runpod_cli/src/: main.rs  opts.rs
