[workspace]
members = ["crates/runpod", "crates/runpod_cli"]
resolver = "2"
metadata.crane.name = "runpod"
package.version = "0.1.0"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# tabled = { version = "0.17" }
tabled = { git = "https://github.com/zhiburt/tabled" }
