[package]
name = "runpod_cli"
version = "0.1.0"
edition = "2021"
description = "CLI for interacting with Runpod.io"

[[bin]]
name = "runpod-cli"
path = "src/main.rs"

[dependencies]
runpod = { path = "../runpod", features = ["tabled"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
tabled.workspace = true
